Fixed home page spacing

--- a/style.css
+++ b/style.css
@@ -39,10 +39,6 @@
   overflow: hidden;
 }
 
-#about-me-par-2 {
-  padding-top: 5%;
-}
-
 .main {
   padding-left: 175px;
   padding-right: 200px;
